[gd_scene load_steps=12 format=2]

[ext_resource path="res://NPC/BaseFoe/Attacks/AttackBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://NPC/FlyingGrubber/flying_grubber_attack_wing.png" type="Texture" id=2]
[ext_resource path="res://NPC/FlyingGrubber/flying_grubber_attack_body.png" type="Texture" id=3]
[ext_resource path="res://Engine/AnimateSpritesheet.gd" type="Script" id=4]
[ext_resource path="res://Engine/Battle/Dodger/Projectiles/GenericProjectile.tscn" type="PackedScene" id=5]
[ext_resource path="res://NPC/FlyingGrubber/Attacks/FlyingGrubberAttack1.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 11 )

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body/wing1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.329877, 1.93187 ),
"update": 0,
"values": [ 23.0, 145.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/wing2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.329877, 1.93187 ),
"update": 0,
"values": [ -23.0, -151.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Grubly:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 179.0, 360.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "ComeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Grubly/body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.366021, 1 ),
"update": 0,
"values": [ Vector2( 1, 285 ), Vector2( 1, 60 ) ]
}

[node name="FlyingGrubberAttack1" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Grubly" type="Node2D" parent="." index="2"]
position = Vector2( 192, 109 )

[node name="body" parent="Grubly" index="0" instance=ExtResource( 5 )]
position = Vector2( 1, 60 )
destructable = false
death_time = 20.0

[node name="bullet" parent="Grubly/body" index="0"]
texture = ExtResource( 3 )
hframes = 2
script = ExtResource( 4 )
anim_speed = 9.0

[node name="CollisionShape2D" parent="Grubly/body" index="1"]
shape = SubResource( 3 )

[node name="wing1" parent="Grubly/body" index="2" instance=ExtResource( 5 )]
position = Vector2( 1, -14 )
rotation = 0.401426
death_time = 20.0

[node name="bullet" parent="Grubly/body/wing1" index="0"]
texture = ExtResource( 2 )
offset = Vector2( 0, -15 )

[node name="CollisionShape2D" parent="Grubly/body/wing1" index="1"]
position = Vector2( 0, -14 )

[node name="wing2" parent="Grubly/body" index="3" instance=ExtResource( 5 )]
position = Vector2( 1, -14 )
rotation = -0.401426
death_time = 20.0

[node name="bullet" parent="Grubly/body/wing2" index="0"]
texture = ExtResource( 2 )
offset = Vector2( 0, -15 )
flip_h = true

[node name="CollisionShape2D" parent="Grubly/body/wing2" index="1"]
position = Vector2( 0, -14 )
shape = SubResource( 4 )

[node name="WingsFlap" type="AnimationPlayer" parent="Grubly" index="1"]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="SpinGrubly" type="AnimationPlayer" parent="." index="3"]
autoplay = "default"
anims/default = SubResource( 2 )

[node name="ComeIn" type="AnimationPlayer" parent="." index="4"]
autoplay = "ComeIn"
anims/ComeIn = SubResource( 5 )
[connection signal="successful_hit" from="Grubly/body/wing1" to="." method="_on_wing1_successful_hit"]
[connection signal="successful_hit" from="Grubly/body/wing2" to="." method="_on_wing2_successful_hit"]

[editable path="Grubly/body"]

[editable path="Grubly/body/wing1"]

[editable path="Grubly/body/wing2"]
